--- a/admin_panel/templates/admin_panel/dashboard.html
+++ b/admin_panel/templates/admin_panel/dashboard.html
@@ -1,5 +1,6 @@
 <h1>{{ department|capfirst }} Department Dashboard</h1>
 <a href="{% url 'admin_panel:admin_logout' %}">Logout</a>
+<a href="{% url "admin_panel:my_map_view" %}">view issues on map</a>
 
 
 <table border="1">
