--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -402,10 +402,13 @@ document.addEventListener('click', function(event) {
   }
 });
 </script>
+{% block extra_js %}
+{% endblock %}
 <main class="container pr-0 pl-0">
   {% block content %}
   {% endblock %}
 </main>
+
 
 <!-- Chat UI -->
 <!-- Chatbot Launcher Button -->
